# Balls2D

./: .gitignore  CMakeLists.txt  application.h  build-android.sh  conanfile.txt  run-gradle.sh
android/bluewater/: build.gradle
android/bluewater/src/main/: AndroidManifest.xml
android/bluewater/src/main/assets/configs/: game.json
android/bluewater/src/main/assets/shaders/: particle.fs  particle.vs  simple.f
android/bluewater/src/main/cpp/: CMakeLists.txt  application.cpp  application.hpp
android/bluewater/src/main/cpp/src/: application.cpp  eventloop.cpp  eventloop.hpp  io.cpp  io.hpp  main.cpp  platform.cpp  platform.hpp  rendercontext.cpp  rendercontext.hpp  sensormanager.cpp  sensormanager.hpp
assets/configs/: game.json
assets/materials/: particles.json
assets/materials/shaders/: simple.frag  surface.fs  surface.vs
b2/: CMakeLists.txt
b2-android/: build.gradle  settings.gradle
b2-android/bluewater/src/main/assets/configs/: game.json
b2-android/bluewater/src/main/assets/shaders/: simple.v  simple.vert
b2-android/bluewater/src/main/cpp/: CMakeLists.txt
b2-android/bluewater/src/main/cpp/src/: eventloop.cpp  eventloop.hpp  io.cpp  io.hpp  main.cpp  rendercontext.cpp  rendercontext.hpp  sensormanager.cpp  sensormanager.hpp
b2-android/bluewater/src/main/res/values/: strings.xml
b2-app/: CMakeLists.txt
b2-app/src/: desktopapp.cpp  desktopapp.hpp  eventloop.cpp  eventloop.hpp  io.cpp  io.hpp  main.cpp  rendercontext.cpp  rendercontext.hpp
b2-core/: CMakeLists.txt
b2-core/include/: application.hpp  camera.hpp  config.hpp  exception.hpp  game.hpp  gl.hpp  isosurface.hpp  physics.hpp
b2-core/include/b2/: application.hpp  bytebuffer.hpp  exception.hpp  logger.hpp
b2-core/include/platform/: eventloop.hpp  io.hpp  rendercontext.hpp
b2-core/src/: application.cpp  camera.cpp  config.cpp  config.hpp  exception.cpp  game.cpp  game.hpp  gearbox.cpp  gearbox.hpp  gl.cpp  gl.hpp  isosurface.cpp  isosurface.hpp  logger.cpp  logger.hpp  main.cpp  physics.cpp  physics.hpp  render.cpp  render.hpp  resources.hpp  threadpool.cpp  threadpool.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
b2-core/src/games/: particles.cpp  particles.hpp  shapes.cpp  shapes.hpp
b2-core/src/platform/: eventloop.cpp  io.cpp  rendercontext.cpp
b2-core/src/render/: cache.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  uniform.cpp  uniform.hpp
b2-core/src/render/backends/: gles3.cpp  gles3.hpp
b2/include/: assetmanager.hpp  camera.hpp  config.hpp  event.hpp  game.hpp  gearbox.hpp  gl.hpp  logger.hpp  physics.hpp  platform.hpp  test_scene.hpp  threadpool.hpp
b2/include/platform/: eventloop.hpp  io.hpp  rendercontext.hpp
b2/src/: assetmanager.cpp  event.cpp  exception.cpp  game.cpp  gl.cpp  isosurface.cpp  main.cpp  physics.cpp  platform.cpp  system.cpp  threadpool.cpp
b2/src/platform/: eventloop.cpp  io.cpp  rendercontext.cpp
contrib/assimp/: CMakeLists.txt
contrib/format/: CMakeLists.txt
contrib/glm/: CMakeLists.txt
contrib/json/: CMakeLists.txt
contrib/sdl/: CMakeLists.txt
desktop/: CMakeLists.txt
desktop/src/: eventloop.cpp  eventloop.hpp  io.cpp  io.hpp  main.cpp  rendercontext.cpp  rendercontext.hpp
include/: application.hpp  exception.hpp  game.hpp  gapi.hpp  isosurface.hpp  logger.hpp  physics.hpp  resources.hpp  spinlock.hpp  system.hpp  timer.hpp
src/: application.cpp  application.h  atomic.cpp  atomic.h  camera.cpp  config.cpp  config.h  file.cpp  file.h  gapi.cpp  gl_context.cpp  gl_context.h  graphics.cpp  graphics.h  log.cpp  log.h  logger.cpp  main.cpp  particle.cpp  particle.h  physics.cpp  physics.h  spinlock.cpp  test_scene.cpp  thread.cpp  thread.h  threadpool.cpp  threadpool.h  timer.cpp  timer.h  window.cpp  window.h
